--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "apollo-server-azure-functions": "^2.11.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "require-graphql-file": "^1.0.1",
     "steamapi": "^2.0.7"
