--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/federation": "^0.14.1",
+    "@apollo/gateway": "^0.14.1",
     "apollo-server-azure-functions": "^2.12.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
