--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@apollo/federation": "^0.14.1",
     "@apollo/gateway": "^0.14.1",
+    "@xboxreplay/xboxlive-auth": "^3.3.0",
     "apollo-server-azure-functions": "^2.12.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
