--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# VSCode
+.vscode
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -64,6 +67,7 @@ typings/
 .env
 .env.test
 .env.prod
+.env.dev
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
