--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.1.0",
+    "forerunnerdb": "^2.0.22",
     "install": "^0.13.0",
     "nintendo-switch-eshop": "^3.0.1",
     "npm": "^6.14.4",
