--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "forerunnerdb": "^2.0.22",
     "install": "^0.13.0",
     "nintendo-switch-eshop": "^3.0.1",
-    "npm": "^6.14.4",
+    "npm": "^6.14.5",
     "querystring": "^0.2.0",
     "require-graphql-file": "^1.0.1",
-    "steamapi": "^2.0.7"
+    "steamapi": "^2.0.7",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
