--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "querystring": "^0.2.0",
     "require-graphql-file": "^1.0.1",
     "steamapi": "^2.0.7",
-    "xml2js": "^0.4.23"
+    "xml-js": "^1.6.11",
   },
   "devDependencies": {
     "eslint": "^6.8.0",
