--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "forerunnerdb": "^2.0.22",
     "install": "^0.13.0",
+    "mongoose": "^5.9.12",
     "nintendo-switch-eshop": "^3.0.1",
     "npm": "^6.14.5",
     "querystring": "^0.2.0",
