- Updating CJ product fetch - Adding query params to products extension - Adding GQL dependencies for upcoming migration - Fixing PSN bug with F2P games - Updating search method in CJ to handle currency and platform params 2

--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "@apollo/federation": "^0.14.1",
     "@apollo/gateway": "^0.14.1",
     "@xboxreplay/xboxlive-auth": "^3.3.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "apollo-server-azure-functions": "^2.12.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.1.0",
     "forerunnerdb": "^2.0.22",
+    "graphql-tag": "^2.10.3",
     "install": "^0.13.0",
     "mongoose": "^5.9.12",
     "nintendo-switch-eshop": "^3.0.1",
+    "node-fetch": "^2.6.0",
     "npm": "^6.14.5",
     "querystring": "^0.2.0",
     "require-graphql-file": "^1.0.1",
