--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "@apollo/federation": "^0.14.1",
     "@apollo/gateway": "^0.14.1",
-    "apollo-server-azure-functions": "^2.12.0",
     "@xboxreplay/xboxlive-auth": "^3.3.0",
+    "apollo-server-azure-functions": "^2.17.0",
+    "apollo-server-errors": "^2.4.2",
     "axios": "^0.19.2",
     "decode-html": "^2.0.0",
     "dotenv": "^8.2.0",
